k8s/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ferrea-libraries
  namespace: ferrea-libraries
  labels:
    app: ferrea-libraries
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ferrea-libraries
  template:
    metadata:
      labels:
        app: ferrea-libraries
    spec:
      containers:
        - name: ferrea-libraries
          image: grimoldi/ferrea-libraries
          ports:
            - containerPort: 80
