k8s/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ferrea-libraries
  namespace: ferrea-libraries
  labels:
    app: ferrea-libraries
spec:
  ports:
    - port: 8080
      name: web-service
      targetPort: 80
  selector:
    app: ferrea-libraries
