k8s/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ferrea-libraries
  namespace: ferrea-libraries
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: libraries.ferrea.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ferrea-libraries
                port:
                  name: web-service
